# MulticastChat

./: CMakeLists.txt
MulticastChat/: CMakeLists.txt  getlocalip.cpp  header.h  main.cpp
